8276126: Dump time class transformation causes heap objects of non-boot classes to be archived